objects/Auto_Product_Config__c/Auto_Product_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Auto Product Config</label>
</CustomObject>