objects/Auto_Product_Config__c/fields/Add_Data_Qty__c.field-meta.xml
<CustomField>
    <fullName>Add_Data_Qty__c</fullName>
    <label>Add Data Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>