objects/Auto_Product_Config__c/fields/Add_Loop_Calibration_Qty__c.field-meta.xml
<CustomField>
    <fullName>Add_Loop_Calibration_Qty__c</fullName>
    <label>Add Loop Calibration Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>