objects/Auto_Product_Config__c/fields/Air_Release_Valve_Std__c.field-meta.xml
<CustomField>
    <fullName>Air_Release_Valve_Std__c</fullName>
    <label>Air Release Valve Std</label>
    <length>15</length>
    <type>Text</type>
</CustomField>