objects/Auto_Product_Config__c/fields/Air_Release_Valve_Std_Qty__c.field-meta.xml
<CustomField>
    <fullName>Air_Release_Valve_Std_Qty__c</fullName>
    <label>Air Release Valve</label>
    <length>20</length>
    <type>Text</type>
</CustomField>