objects/Auto_Product_Config__c/fields/Battery_Packs_EDA__c.field-meta.xml
<CustomField>
    <fullName>Battery_Packs_EDA__c</fullName>
    <label>Battery Packs - EDA</label>
    <length>20</length>
    <type>Text</type>
</CustomField>