objects/Auto_Product_Config__c/fields/Battery_Packs_EMS__c.field-meta.xml
<CustomField>
    <fullName>Battery_Packs_EMS__c</fullName>
    <label>Battery Packs - EMS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>