objects/Auto_Product_Config__c/fields/Brass_LCI_Padlock_Qt__c.field-meta.xml
<CustomField>
    <fullName>Brass_LCI_Padlock_Qt__c</fullName>
    <label>Brass LCI Padlock</label>
    <length>20</length>
    <type>Text</type>
</CustomField>