objects/Auto_Product_Config__c/fields/Breakglass_Callpoint_ADT__c.field-meta.xml
<CustomField>
    <fullName>Breakglass_Callpoint_ADT__c</fullName>
    <label>Breakglass Callpoint ADT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>