objects/Auto_Product_Config__c/fields/Breakglass_Callpoint_Apollo_S65__c.field-meta.xml
<CustomField>
    <fullName>Breakglass_Callpoint_Apollo_S65__c</fullName>
    <label>Breakglass Callpoint Apollo S65</label>
    <length>20</length>
    <type>Text</type>
</CustomField>