objects/Auto_Product_Config__c/fields/Breakglass_Callpoint_Apollo_XP95__c.field-meta.xml
<CustomField>
    <fullName>Breakglass_Callpoint_Apollo_XP95__c</fullName>
    <label>Breakglass Callpoint Apollo XP95</label>
    <length>20</length>
    <type>Text</type>
</CustomField>