objects/Auto_Product_Config__c/fields/Breakglass_Callpoint_Nittan__c.field-meta.xml
<CustomField>
    <fullName>Breakglass_Callpoint_Nittan__c</fullName>
    <label>Breakglass Callpoint Nittan</label>
    <length>20</length>
    <type>Text</type>
</CustomField>