objects/Auto_Product_Config__c/fields/Breakglass_Callpoint_Ziton__c.field-meta.xml
<CustomField>
    <fullName>Breakglass_Callpoint_Ziton__c</fullName>
    <label>Breakglass Callpoint Ziton</label>
    <length>20</length>
    <type>Text</type>
</CustomField>