objects/Auto_Product_Config__c/fields/Breakglass_Cover__c.field-meta.xml
<CustomField>
    <fullName>Breakglass_Cover__c</fullName>
    <description>Call Point Hinged Perspex Cover for the service sheet&apos;s &quot;Breakglass Cover&quot;  products</description>
    <label>Breakglass Cover</label>
    <length>20</length>
    <type>Text</type>
</CustomField>