objects/Auto_Product_Config__c/fields/Breakglass_Releasesp_Qty__c.field-meta.xml
<CustomField>
    <fullName>Breakglass_Releasesp_Qty__c</fullName>
    <label>Breakglass Release Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>