objects/Auto_Product_Config__c/fields/Callpoint_Zone_ID_Qty__c.field-meta.xml
<CustomField>
    <fullName>Callpoint_Zone_ID_Qty__c</fullName>
    <label>Callpoint/Zone ID Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>