objects/Auto_Product_Config__c/fields/Camera_Calibration_Focusing_Qty__c.field-meta.xml
<CustomField>
    <fullName>Camera_Calibration_Focusing_Qty__c</fullName>
    <label>Camera Calibration &amp; Focusing Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>