objects/Auto_Product_Config__c/fields/Camera_Qty__c.field-meta.xml
<CustomField>
    <fullName>Camera_Qty__c</fullName>
    <label>Camera Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>