objects/Auto_Product_Config__c/fields/Catalogue_Order__c.field-meta.xml
<CustomField>
    <fullName>Catalogue_Order__c</fullName>
    <label>Catalogue Order</label>
    <length>20</length>
    <type>Text</type>
</CustomField>