objects/Auto_Product_Config__c/fields/Decon_Detector_Qty__c.field-meta.xml
<CustomField>
    <fullName>Decon_Detector_Qty__c</fullName>
    <label>Decon Detector Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>