objects/Auto_Product_Config__c/fields/Decon_Fluid_Lines__c.field-meta.xml
<CustomField>
    <fullName>Decon_Fluid_Lines__c</fullName>
    <label>Decon Fluid Lines</label>
    <length>50</length>
    <type>Text</type>
</CustomField>