objects/Auto_Product_Config__c/fields/Decon_Outlet_Head__c.field-meta.xml
<CustomField>
    <fullName>Decon_Outlet_Head__c</fullName>
    <label>Decon Outlet Head</label>
    <length>50</length>
    <type>Text</type>
</CustomField>