objects/Auto_Product_Config__c/fields/Decon_SLA_Terminal_Set__c.field-meta.xml
<CustomField>
    <fullName>Decon_SLA_Terminal_Set__c</fullName>
    <label>Decon SLA Terminal Set.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>