objects/Auto_Product_Config__c/fields/Detector_Base__c.field-meta.xml
<CustomField>
    <fullName>Detector_Base__c</fullName>
    <label>Detector Base</label>
    <length>20</length>
    <type>Text</type>
</CustomField>