objects/Auto_Product_Config__c/fields/Detector_Calibration_Qty__c.field-meta.xml
<CustomField>
    <fullName>Detector_Calibration_Qty__c</fullName>
    <label>Detector Calibration Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>