objects/Auto_Product_Config__c/fields/Diode_Base__c.field-meta.xml
<CustomField>
    <fullName>Diode_Base__c</fullName>
    <label>Diode Base</label>
    <length>20</length>
    <type>Text</type>
</CustomField>