objects/Auto_Product_Config__c/fields/Discharge_Pressure_Seals__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Pressure_Seals__c</fullName>
    <label>Discharge Pressure Seals</label>
    <length>50</length>
    <type>Text</type>
</CustomField>