objects/Auto_Product_Config__c/fields/Door_Contact_Qty__c.field-meta.xml
<CustomField>
    <fullName>Door_Contact_Qty__c</fullName>
    <label>Door Contact Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>