objects/Auto_Product_Config__c/fields/Drain_Valve_Sign__c.field-meta.xml
<CustomField>
    <fullName>Drain_Valve_Sign__c</fullName>
    <label>Drain Valve Sign</label>
    <length>15</length>
    <type>Text</type>
</CustomField>