objects/Auto_Product_Config__c/fields/Dust_Cap_Fixing_Chain__c.field-meta.xml
<CustomField>
    <fullName>Dust_Cap_Fixing_Chain__c</fullName>
    <label>Dust Cap Fixing Chain</label>
    <length>15</length>
    <type>Text</type>
</CustomField>