objects/Auto_Product_Config__c/fields/Dust_Cap_Fixing_Chain_Qty__c.field-meta.xml
<CustomField>
    <fullName>Dust_Cap_Fixing_Chain_Qty__c</fullName>
    <label>Dust Cap Fixing Chain</label>
    <length>20</length>
    <type>Text</type>
</CustomField>