objects/Auto_Product_Config__c/fields/EL_Tube_2D_Lamp_Biax__c.field-meta.xml
<CustomField>
    <fullName>EL_Tube_2D_Lamp_Biax__c</fullName>
    <label>EL Tube 2D Lamp/Biax</label>
    <length>20</length>
    <type>Text</type>
</CustomField>