objects/Auto_Product_Config__c/fields/EL_Tube_4_Watt_Tube_rep__c.field-meta.xml
<CustomField>
    <fullName>EL_Tube_4_Watt_Tube_rep__c</fullName>
    <label>EL Tube 4 Watt Tube rep</label>
    <length>20</length>
    <type>Text</type>
</CustomField>