objects/Auto_Product_Config__c/fields/Electronic_Flashing_Beacon__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Flashing_Beacon__c</fullName>
    <label>Electronic Flashing Beacon</label>
    <length>20</length>
    <type>Text</type>
</CustomField>