objects/Auto_Product_Config__c/fields/Electronic_Sounder_Apollo_S65__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Sounder_Apollo_S65__c</fullName>
    <label>Electronic Sounder Apollo S65</label>
    <length>20</length>
    <type>Text</type>
</CustomField>