objects/Auto_Product_Config__c/fields/Electronic_Sounder_Apollo_XP95__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Sounder_Apollo_XP95__c</fullName>
    <label>Electronic Sounder Apollo XP95</label>
    <length>20</length>
    <type>Text</type>
</CustomField>