objects/Auto_Product_Config__c/fields/Electronic_Sounder_EMS__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Sounder_EMS__c</fullName>
    <label>Electronic Sounder EMS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>