objects/Auto_Product_Config__c/fields/Electronic_Sounder_Nittan__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Sounder_Nittan__c</fullName>
    <label>Electronic Sounder Nittan</label>
    <length>20</length>
    <type>Text</type>
</CustomField>