objects/Auto_Product_Config__c/fields/Electronic_Sounder_Other__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Sounder_Other__c</fullName>
    <label>Electronic Sounder Other</label>
    <length>20</length>
    <type>Text</type>
</CustomField>