objects/Auto_Product_Config__c/fields/Electronic_Soundersp_Qty__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Soundersp_Qty__c</fullName>
    <label>Electronic Sounder Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>