objects/Auto_Product_Config__c/fields/Emergency_Lights_16w_2D__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Lights_16w_2D__c</fullName>
    <inlineHelpText>Product&apos;s Unique Sage Code</inlineHelpText>
    <label>Emergency Lights 16w 2D</label>
    <length>20</length>
    <type>Text</type>
</CustomField>