objects/Auto_Product_Config__c/fields/Emergency_Lights_28w_2D__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Lights_28w_2D__c</fullName>
    <label>Emergency Lights 28w 2D</label>
    <length>20</length>
    <type>Text</type>
</CustomField>