objects/Auto_Product_Config__c/fields/Emergency_Lights_28w_2D_c_w_P_c__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Lights_28w_2D_c_w_P_c__c</fullName>
    <label>Emergency Lights 28w 2D c/w P/c</label>
    <length>20</length>
    <type>Text</type>
</CustomField>