objects/Auto_Product_Config__c/fields/Emergency_Lights_8w_Bulkhead__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Lights_8w_Bulkhead__c</fullName>
    <label>Emergency Lights 8w Bulkhead</label>
    <length>20</length>
    <type>Text</type>
</CustomField>