objects/Auto_Product_Config__c/fields/Emergency_Lights_Exit_Box__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Lights_Exit_Box__c</fullName>
    <label>Emergency Lights Exit Box</label>
    <length>20</length>
    <type>Text</type>
</CustomField>