objects/Auto_Product_Config__c/fields/Emergency_Lights_LED__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Lights_LED__c</fullName>
    <label>Emergency Lights LED</label>
    <length>50</length>
    <type>Text</type>
</CustomField>