objects/Auto_Product_Config__c/fields/Emergency_Lights_Legend__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Lights_Legend__c</fullName>
    <label>Emergency Lights Legend</label>
    <length>20</length>
    <type>Text</type>
</CustomField>