objects/Auto_Product_Config__c/fields/Emergency_Lights_Twinspot_Beam__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Lights_Twinspot_Beam__c</fullName>
    <label>Emergency Lights Twinspot Beam</label>
    <length>20</length>
    <type>Text</type>
</CustomField>