objects/Auto_Product_Config__c/fields/Environmental_Disposal_B_Qty__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Disposal_B_Qty__c</fullName>
    <label>Environmental Disposal B Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>