objects/Auto_Product_Config__c/fields/FA_Add_Data__c.field-meta.xml
<CustomField>
    <fullName>FA_Add_Data__c</fullName>
    <label>Add. Data</label>
    <length>20</length>
    <type>Text</type>
</CustomField>