objects/Auto_Product_Config__c/fields/FA_Add_Loop_Calibration__c.field-meta.xml
<CustomField>
    <fullName>FA_Add_Loop_Calibration__c</fullName>
    <label>Add. Loop Calibration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>