objects/Auto_Product_Config__c/fields/FA_Callpoint_Zone_ID__c.field-meta.xml
<CustomField>
    <fullName>FA_Callpoint_Zone_ID__c</fullName>
    <label>Callpoint/Zone ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>