objects/Auto_Product_Config__c/fields/FA_dBa_Reading__c.field-meta.xml
<CustomField>
    <fullName>FA_dBa_Reading__c</fullName>
    <label>dBa Reading</label>
    <length>20</length>
    <type>Text</type>
</CustomField>