objects/Auto_Product_Config__c/fields/FA_Deacon_Detector__c.field-meta.xml
<CustomField>
    <fullName>FA_Deacon_Detector__c</fullName>
    <label>Decon Detector</label>
    <length>20</length>
    <type>Text</type>
</CustomField>