objects/Auto_Product_Config__c/fields/FA_Deacon_PCB__c.field-meta.xml
<CustomField>
    <fullName>FA_Deacon_PCB__c</fullName>
    <label>Decon PCB</label>
    <length>20</length>
    <type>Text</type>
</CustomField>