objects/Auto_Product_Config__c/fields/FA_Environmental_Disposal_T__c.field-meta.xml
<CustomField>
    <fullName>FA_Environmental_Disposal_T__c</fullName>
    <label>Environmental Disposal T</label>
    <length>20</length>
    <type>Text</type>
</CustomField>