objects/Auto_Product_Config__c/fields/FA_Fire_Bell__c.field-meta.xml
<CustomField>
    <fullName>FA_Fire_Bell__c</fullName>
    <label>Fire Bell</label>
    <length>20</length>
    <type>Text</type>
</CustomField>