objects/Auto_Product_Config__c/fields/FA_Mechanical_Friction_Inhib__c.field-meta.xml
<CustomField>
    <fullName>FA_Mechanical_Friction_Inhib__c</fullName>
    <label>Mechanical Friction Inhib.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>