objects/Auto_Product_Config__c/fields/FA_Radioactive_Disposal__c.field-meta.xml
<CustomField>
    <fullName>FA_Radioactive_Disposal__c</fullName>
    <label>Radioactive Disposal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>