objects/Auto_Product_Config__c/fields/FA_Replacement_Glass__c.field-meta.xml
<CustomField>
    <fullName>FA_Replacement_Glass__c</fullName>
    <label>Replacement Glass</label>
    <length>20</length>
    <type>Text</type>
</CustomField>