objects/Auto_Product_Config__c/fields/FA_RSSI_Calibration__c.field-meta.xml
<CustomField>
    <fullName>FA_RSSI_Calibration__c</fullName>
    <label>RSSI Calibration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>