objects/Auto_Product_Config__c/fields/FA_S65_Detector_Calibration__c.field-meta.xml
<CustomField>
    <fullName>FA_S65_Detector_Calibration__c</fullName>
    <label>S65 Detector Calibration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>