objects/Auto_Product_Config__c/fields/FA_SLA_Interconnection__c.field-meta.xml
<CustomField>
    <fullName>FA_SLA_Interconnection__c</fullName>
    <label>SLA Interconnection</label>
    <length>20</length>
    <type>Text</type>
</CustomField>