objects/Auto_Product_Config__c/fields/FA_SLA_Power_Calibration__c.field-meta.xml
<CustomField>
    <fullName>FA_SLA_Power_Calibration__c</fullName>
    <label>SLA Power Calibration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>