objects/Auto_Product_Config__c/fields/FA_SLA_Term_Set_Decon__c.field-meta.xml
<CustomField>
    <fullName>FA_SLA_Term_Set_Decon__c</fullName>
    <label>SLA Term Set Decon</label>
    <length>20</length>
    <type>Text</type>
</CustomField>