objects/Auto_Product_Config__c/fields/FA_STD_Detector_Calibration__c.field-meta.xml
<CustomField>
    <fullName>FA_STD_Detector_Calibration__c</fullName>
    <label>Detector Calibration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>