objects/Auto_Product_Config__c/fields/FA_Test_Keys__c.field-meta.xml
<CustomField>
    <fullName>FA_Test_Keys__c</fullName>
    <label>Test Keys</label>
    <length>20</length>
    <type>Text</type>
</CustomField>