objects/Auto_Product_Config__c/fields/Fire_Awareness_Fire_Training__c.field-meta.xml
<CustomField>
    <fullName>Fire_Awareness_Fire_Training__c</fullName>
    <label>Fire Awareness &amp; Fire Training</label>
    <length>20</length>
    <type>Text</type>
</CustomField>