objects/Auto_Product_Config__c/fields/Fire_Door_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Fire_Door_Maintenance__c</fullName>
    <label>Fire Door Maintenance</label>
    <length>15</length>
    <type>Text</type>
</CustomField>