objects/Auto_Product_Config__c/fields/Fire_Risk_Assesment__c.field-meta.xml
<CustomField>
    <fullName>Fire_Risk_Assesment__c</fullName>
    <label>Fire Risk Assesment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>