objects/Auto_Product_Config__c/fields/Fire_Suppression_Nozzle_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Fire_Suppression_Nozzle_Replacement__c</fullName>
    <label>Fire Suppression Nozzle Replacement</label>
    <length>15</length>
    <type>Text</type>
</CustomField>