objects/Auto_Product_Config__c/fields/Flow_Pressure_Switch__c.field-meta.xml
<CustomField>
    <fullName>Flow_Pressure_Switch__c</fullName>
    <label>Flow/Pressure Switch</label>
    <length>20</length>
    <type>Text</type>
</CustomField>