objects/Auto_Product_Config__c/fields/Fusible_Links__c.field-meta.xml
<CustomField>
    <fullName>Fusible_Links__c</fullName>
    <label>Fusible Links</label>
    <length>50</length>
    <type>Text</type>
</CustomField>