objects/Auto_Product_Config__c/fields/Gauge_Calibration__c.field-meta.xml
<CustomField>
    <fullName>Gauge_Calibration__c</fullName>
    <label>Gauge Calibration</label>
    <length>20</length>
    <type>Text</type>
</CustomField>