objects/Auto_Product_Config__c/fields/Georgian_Wired_Class__c.field-meta.xml
<CustomField>
    <fullName>Georgian_Wired_Class__c</fullName>
    <label>Georgian Wired Class</label>
    <length>15</length>
    <type>Text</type>
</CustomField>