objects/Auto_Product_Config__c/fields/Glass_Detector_Qty__c.field-meta.xml
<CustomField>
    <fullName>Glass_Detector_Qty__c</fullName>
    <label>Glass Detector Qty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>