objects/Auto_Product_Config__c/fields/Glazing_Seal_Channel_Qty__c.field-meta.xml
<CustomField>
    <fullName>Glazing_Seal_Channel_Qty__c</fullName>
    <label>Glazing Seal &amp; Channel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>