objects/Auto_Product_Config__c/fields/Heat_Detector_Apollo_XP95__c.field-meta.xml
<CustomField>
    <fullName>Heat_Detector_Apollo_XP95__c</fullName>
    <label>Heat Detector Apollo XP95</label>
    <length>20</length>
    <type>Text</type>
</CustomField>