objects/Auto_Product_Config__c/fields/Heat_Detector_EMS__c.field-meta.xml
<CustomField>
    <fullName>Heat_Detector_EMS__c</fullName>
    <label>Heat Detector EMS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>