objects/Auto_Product_Config__c/fields/Heat_Detector_Menvier__c.field-meta.xml
<CustomField>
    <fullName>Heat_Detector_Menvier__c</fullName>
    <label>Heat Detector Menvier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>