objects/Auto_Product_Config__c/fields/Heat_Detector_Notifier__c.field-meta.xml
<CustomField>
    <fullName>Heat_Detector_Notifier__c</fullName>
    <label>Heat Detector Notifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>