objects/Auto_Product_Config__c/fields/Heat_Detector_Other__c.field-meta.xml
<CustomField>
    <fullName>Heat_Detector_Other__c</fullName>
    <label>Heat Detector Other</label>
    <length>20</length>
    <type>Text</type>
</CustomField>