objects/Auto_Product_Config__c/fields/Heat_Sounder_Apollo_Discovery__c.field-meta.xml
<CustomField>
    <fullName>Heat_Sounder_Apollo_Discovery__c</fullName>
    <label>Heat Sounder Apollo Discovery</label>
    <length>20</length>
    <type>Text</type>
</CustomField>