objects/Auto_Product_Config__c/fields/Heat_Sounder_Hochiki__c.field-meta.xml
<CustomField>
    <fullName>Heat_Sounder_Hochiki__c</fullName>
    <label>Heat Sounder Hochiki</label>
    <length>20</length>
    <type>Text</type>
</CustomField>